--- a/Slider_assignment/slider.css
+++ b/Slider_assignment/slider.css
@@ -8,10 +8,53 @@
   overflow: hidden;    /* prevents images from overflowing */
   background: #000;    /* optional: black background */
 }
+/* Each slide */
+.mySlides {
+  position:absolute;
+  width: 100%;
+  height: 100%;            /* take full height of container */
+  display: flex;           /* center the image */
+  justify-content: center;
+  align-items: center;
+
+}
+
 .mySlides img {
   width: 100%;
   height: 100%;
-  object-fit: cover;   /* ✅ crop & fill */
+  object-fit: cover;   
+}
+
+
+.slide-next{
+  animation-name: slidenext;
+    animation-duration: 0.4s;
+}
+@keyframes slidenext {
+from {
+    transform: translateX(50%);
+  
+}
+to{
+    transform: translateX(0%);
+    
+}
+}
+
+.slide-prev {
+  animation-name: slidePrev;
+    animation-duration: 0.4s;
+}
+
+@keyframes slidePrev {
+  from {
+    transform: translateX(-50%);
+    opacity: 0.5;
+  }
+  to {
+    transform: translateX(0%);
+    opacity: 1;
+  }
 }
 
 
@@ -41,20 +84,10 @@
   background-color: rgba(0,0,0,0.8);
 }
 
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
 
 .numbertext {
   color: #f2f2f2;
-  font-size: 12px;
+  font-size: 16px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
@@ -76,37 +109,3 @@
   background-color: #717171;
 }
 
-
-.slide {
-  display: none;
-  animation-duration: 0.4s;
-}
-
-.slide-next{
-  animation-name: slidenext;
-}
-@keyframes slidenext {
-from {
-    transform: translateX(50%);
-    opacity: 0.5;
-}
-to{
-    transform: translateX(0%);
-    opacity: 1;
-}
-}
-
-.slide-prev {
-  animation-name: slidePrev;
-}
-
-@keyframes slidePrev {
-  from {
-    transform: translateX(-50%);
-    opacity: 0.5;
-  }
-  to {
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
